test/libsolidity/syntaxTests/constants/constant_override.sol
uint constant override x = 2;
// ----
// ParserError 2314: (14-22): Expected identifier but got 'override'
